# raspberry-pi-cross-compile

./: README.md
docker/: Dockerfile  README.md
hello-cross-compile/: CMakeLists.txt  main.cpp  toolchain.cmake
hello-gocv/: .gitignore  go.mod
hello-world-go/: .gitignore
